arc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-foundations
  namespace: arc-exercise
  labels:
    app: gitops-foundations
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-foundations
                port:
                  number: 8080
